styles/darkness.css
/* ... */
.header > .section-1:only-child {
        border-bottom: 1px solid #dddddf;
        padding-bottom: 8px;
}

.header,
.writing {
        margin-left: auto;
        margin-right: auto;
        margin-top: 0;
        margin-bottom: 0;
        zoom: 1;
        position: relative;
        padding-left: 0.9375rem;
        padding-right: 0.9375rem;
}

.header::after {
        clear: both;
}

/*
 ┌─────────────────────────────────────┐
 │                _ _   _              │
 │ __      ___ __(_) │_(_)_ __   __ _  │
 │ \ \ /\ / / '__│ │ __│ │ '_ \ / _` │ │
 │  \ V  V /│ │  │ │ │_│ │ │ │ │ (_│ │ │
 │   \_/\_/ │_│  │_│\__│_│_│ │_│\__, │ │
 │                              │___/  │
 └─────────────────────────────────────┘ */

.writing {
        width: var(--paragraph-width);
        max-width: var(--paragraph-width-max);
        font-size: var(--paragraph-size);
        line-height: var(--paragraph-line-height);
        font-family: inherit;
        font-weight: var(--paragraph-font-weight);
        line-height: var(--paragraph-line-height);
        margin-top: 1rem;
        margin-bottom: 0.625rem;
        text-rendering: inherit;
        -webkit-font-smoothing: inherit;
        -webkit-hyphens: auto;
        hyphens: auto;
}

.writing::before {
        content: none;
}

/*
 ┌──────────────────────┐
 │  _ _       _         │
 │ │ (_)_ __ │ │ _____  │
 │ │ │ │ '_ \│ │/ / __│ │
 │ │ │ │ │ │ │   <\__ \ │
 │ │_│_│_│ │_│_│\_\___/ │
 └──────────────────────┘ */

a:not(.image):not(.gallery-item) {
        cursor: pointer;
        text-decoration: none;
        border-bottom: 1px solid var(--color-text);
        color: var(--color-text);
        line-height: inherit;
        transition: 80ms;
        font-size: 100%;
        letter-spacing: -0.03rem;
}

a:not(.image):not(.gallery-item):hover {
        /* color: white; */
        color: var(--color-link);
        border-bottom: none;
        /* background-color: var(--color-link); */
}

/*
 ┌────────────────────────────────────────┐
 │                _   _                   │
 │  ___  ___  ___│ │_(_) ___  _ __  ___   │
 │ / __│/ _ \/ __│ __│ │/ _ \│ '_ \/ __│  │
 │ \__ \  __/ (__│ │_│ │ (_) │ │ │ \__ \  │
 │ │___/\___│\___│\__│_│\___/│_│ │_│___/  │
 └────────────────────────────────────────┘ */

.section-1:last-child {
        padding-bottom: 0;
}

.paragraph + .section-2 {
        border-top: 1px solid #e7e7e9;
}

.paragraph + .section-3 {
        margin-top: 2rem;
}

.paragraph + .paragraph {
        margin-top: 2rem;
}

.section-2:first-of-type {
        margin-top: -0.7rem;
}

.section-2,
.section-3,
.section-4,
.section-5,
.section-6 {
        page-break-after: avoid;
        letter-spacing: -0.005rem;
        font-family: inherit;
        font-weight: var(--header-font-weight);
        color: var(--color-header);
        text-rendering: var(--header-text-rendering);
        margin-top: 1rem;
        margin-bottom: 0.5rem;
        padding-bottom: 0.5rem;
}

.section-1 {
        padding-top: 0.2rem;
        line-height: 4rem;
        font-size: 3.37rem;
        font-weight: 500;
        letter-spacing: -0.01rem;
}

@media all and (max-width: 640px) {
        .section-1 {
                font-size: 2.6rem;
                line-height: 2.9rem;
        }
}

.section-2 {
        padding-top: 2.7rem;
        font-size: 2.2rem;
}

.section-3 {
        font-size: 1.7rem;
}

/* .section-3 + .section-3 { */
/*         margin-top: 1.8rem; */
/* } */

.section-4,
.section-5 {
        font-size: 1.125rem;
}

.section-6 {
        font-size: 1rem;
}

/*
 ┌──────────────────────────────┐
 │                    _         │
 │   __ _ _   _  ___ │ │_ ___   │
 │  / _` │ │ │ │/ _ \│ __/ _ \  │
 │ │ (_│ │ │_│ │ (_) │ ││  __/  │
 │  \__, │\__,_│\___/ \__\___│  │
 │     │_│                      │
 └──────────────────────────────┘ */

.quote {
        font-size: var(--quote-size);
        line-height: var(--quote-line-height);
        max-width: var(--quote-width);
        display: block;
        margin-block-start: 1rem;
        margin-block-end: 1rem;
        margin-inline-start: 40px;
        margin-inline-end: 40px;
}

/*
 ┌────────────────────────────────┐
 │                 _              │
 │   ___ ___ _ __ │ │_ ___ _ __   │
 │  / __/ _ \ '_ \│ __/ _ \ '__│  │
 │ │ (_│  __/ │ │ │ ││  __/ │     │
 │  \___\___│_│ │_│\__\___│_│     │
 └────────────────────────────────┘ */

.center {
        text-align: center;
}

/*
 ┌──────────────────────────────────────────┐
 │      _                                   │
 │   __│ │_ __ ___  _ __   ___ __ _ _ __    │
 │  / _` │ '__/ _ \│ '_ \ / __/ _` │ '_ \   │
 │ │ (_│ │ │ │ (_) │ │_) │ (_│ (_│ │ │_) │  │
 │  \__,_│_│  \___/│ .__/ \___\__,_│ .__/   │
 │                 │_│             │_│      │
 └──────────────────────────────────────────┘ */

.dropcap::first-letter {
        float: left !important;
        font-size: 3rem !important;
        font-style: normal !important;
        font-weight: 500 !important;
        line-height: 2rem !important;
        margin: -0.5rem 0 0 !important;
}

/*
 ┌────────────────────────────────────┐
 │              _ _                   │
 │   __ _  __ _│ │ │ ___ _ __ _   _   │
 │  / _` │/ _` │ │ │/ _ \ '__│ │ │ │  │
 │ │ (_│ │ (_│ │ │ │  __/ │  │ │_│ │  │
 │  \__, │\__,_│_│_│\___│_│   \__, │  │
 │  │___/                     │___/   │
 └────────────────────────────────────┘ */

.gallery {
        max-width: 100%;
        min-width: 1px;
        width: var(--gallery-width);
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;
        align-content: flex-start;
        align-items: center;
        gap: 4px;
        margin-top: 2rem;
        margin-bottom: 2rem;
}

.no-gap {
        gap: 0;
}

.gallery a .item {
        width: 100%;
        height: 100%;
}

.item {
        flex: 1;
        flex-grow: 0;
        width: 1%;
        height: 1%;
        transition: all 0.2s ease-in-out;
}
/* ... */

